[gd_scene load_steps=5 format=3 uid="uid://4803ujb4j5ip"]

[ext_resource type="Script" path="res://src/nodes/color_ref.gd" id="1_5ybrp"]
[ext_resource type="Texture2D" uid="uid://618y8vylwaj5" path="res://assets/icons/copy.png" id="2_y2ssw"]
[ext_resource type="PackedScene" uid="uid://clpd6j7qnvl3t" path="res://src/graph_double_click_detect.tscn" id="3_x60gf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sl2qq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.34902)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ColorRef" type="GraphElement"]
custom_minimum_size = Vector2(177, 120)
offset_right = 177.0
offset_bottom = 120.0
script = ExtResource("1_5ybrp")

[node name="BorderPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sl2qq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 31)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "#ffffff"
placeholder_text = "#ffffff"

[node name="BtnCopyHex" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
focus_mode = 0
icon = ExtResource("2_y2ssw")
icon_alignment = 1
expand_icon = true

[node name="ColorPicker" type="ColorPicker" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 0
edit_alpha = false
can_add_swatches = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="GraphDoubleClickDetect" parent="." instance=ExtResource("3_x60gf")]

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="raise_request" from="." to="GraphDoubleClickDetect" method="_on_raise"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BtnCopyHex" to="." method="_on_btn_copy_hex_pressed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="double_clicked" from="GraphDoubleClickDetect" to="." method="_on_graph_double_click_detect_double_clicked"]
